<resources>

    <string name="app_name">Walloff</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="cred_store_username">username</string>
    <string name="cred_store_password">password</string>
    <string name="cred_store_btn">Save</string>
    <string name="cred_store_password2">password again</string>
    <string name="todo">TODO</string>
    <string name="main_menu_banner">Walloff 2.0</string>
    <string name="main_menu_multiplayer_create">Host</string>
    <string name="main_menu_multiplayer_join">Join</string>
    <string name="join_lobby_elt_lobbyname">Lobby name</string>
    <string name="join_lobby_elt_mapname">Map name</string>
    <string name="join_lobby_elt_numplayers">Num players</string>
    <string name="multi_create_lobby_lobbyname">Lobby name</string>
    <string name="create_lobby_map_select">Map: </string>
    <string name="create_lobby_size_select">Size: </string>
    <string name="create_lobby_moving_select">Moving obstacles: </string>
    <string name="create_lobby_numobj_select"># obstacles: </string>
    <string name="create_lobby_shrink_select">Shrinkable: </string>
    <string name="create_lobby_btncreate">Create</string>
    <string name="create_lobby_shrinkable">Shrinkable</string>
    <string name="create_lobby_obstacles">Obstacles</string>
    <string name="create_lobby_moving">Moving</string>
    <string name="lobby_view_count_down">0:00</string>
    <string name="cred_store_title_content">You only need to enter this once!</string>
    <string name="options_tag">Options</string>
    <string name="single_tag">Singleplayer</string>
    <string name="multi_tag">Multiplayer</string>
    <string name="profile_tag">Profile</string>
    <string name="home_tag">Home</string>
    <string name="blank"></string>
    
    <color name="Black">#000000</color>
    <color name="Black_Transparent">#dd000000</color>
    <color name="White">#ffffff</color>
    <color name="Red">#ff0000</color>
    <color name="TronBlue">#18cae6</color>
    <color name="TronPurple">#cc33ff</color>
    <color name="TronGreen">#7FFF00</color>
    <color name="TronRed">#ff0066</color>
    <color name="TronYellow">#f3f315</color>
	
    <string-array name="map_select">
        <item>Map</item>
        <item>Original</item>
        <item>2</item>
        <item>3</item>
        <item>FU</item>
    </string-array>
    <string-array name="map_size">
        <item>Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="map_num_obj">
        <item>#Obj</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
        <string name="profile_avitar_text">Avatar</string>
        <string name="profile_character_text">Current Character</string>
</resources>