<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cred_store_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/todo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/cred_store_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/cred_store_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cred_store_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cred_store_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/cred_store_username" />

    <EditText
        android:id="@+id/cred_store_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cred_store_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/cred_store_password2"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1.0"
        android:gravity="center" >

        <Button
            android:id="@+id/cred_store_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cred_store_btn" />

    </LinearLayout>

</RelativeLayout>