<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/multi_join_lobby_elt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/join_lobby_elt_lobby_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/join_lobby_elt_lobbyname" />

    <TextView
        android:id="@+id/join_lobby_elt_map_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/join_lobby_elt_mapname" />

    <TextView
        android:id="@+id/join_lobby_elt_num_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/join_lobby_elt_numplayers" />

</LinearLayout>