<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/multi_create_lobby_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >

    
    <RelativeLayout android:id="@+id/lobby_name_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" >
	
        
        <TableRow android:id="@+id/lobby_name_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:weightSum="1.0" >
            
	        <EditText
	            android:id="@+id/create_lobby_lobby_name"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:hint="@string/multi_create_lobby_lobbyname"
	            android:singleLine="true" />
	
	        <TextView
	            android:id="@+id/lobby_name_error"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:text="@string/blank"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/Red" />
	        
    	</TableRow></RelativeLayout><!-- create_lobby_name_holder -->
    

	<RelativeLayout android:id="@+id/create_lobby_map_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" >

	    <TableRow android:id="@+id/lobby_map_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:weightSum="1.0"
            android:gravity="center_vertical" >
	    
	        <TextView android:id="@+id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <Spinner android:id="@+id/create_lobby_map_spin"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:prompt="@string/create_lobby_map_select"
	            android:entries="@array/map_select" />
	            
	        <TextView android:id="@id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <Spinner android:id="@+id/create_lobby_size_spin"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:prompt="@string/create_lobby_size_select"
	            android:entries="@array/map_size" />
	        
	        <TextView android:id="@id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <ToggleButton android:id="@+id/create_lobby_shrink_tog"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:textOn="@string/create_lobby_shrinkable"
	            android:textOff="@string/create_lobby_shrinkable" />
            
    	</TableRow></RelativeLayout><!-- create_lobby_map_holder -->


	<RelativeLayout android:id="@+id/create_lobby_obj_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" >

	    <TableRow android:id="@+id/lobby_obj_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:weightSum="1.0"
            android:gravity="center_vertical" >
	    
	        <TextView android:id="@id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <ToggleButton android:id="@+id/create_lobby_obj"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:textOn="@string/create_lobby_obstacles"
	            android:textOff="@string/create_lobby_obstacles" />
	        
	        <TextView android:id="@id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <Spinner android:id="@+id/create_lobby_numobj_spin"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:prompt="@string/create_lobby_numobj_select"
	            android:entries="@array/map_num_obj" />
	        
	        <TextView android:id="@id/spacer"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.02" />
	        
	        <ToggleButton android:id="@+id/create_lobby_moving_tog"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:textOn="@string/create_lobby_moving"
	            android:textOff="@string/create_lobby_moving" />

    	</TableRow></RelativeLayout><!-- create_lobby_obj_holder -->


	<RelativeLayout android:id="@+id/create_lobby_btn_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25" >

	    <TableRow android:id="@+id/lobby_create_btn_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:weightSum="1.0" >
	    
	        <Button android:id="@+id/create_lobby_btn_create"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="0.5"
	            android:text="@string/create_lobby_btncreate"
	            android:textColor="@color/TronBlue"
	            android:background="@drawable/button_selector" />

    	</TableRow></RelativeLayout><!-- create_lobby_btn_holder -->

</LinearLayout><!-- parent -->